--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"react-scripts": "5.0.1",
 		"sass": "^1.54.6",
 		"typescript": "^4.8.2",
+		"uniqid": "^5.4.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -42,5 +43,8 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://127.0.0.1:5000"
+	"proxy": "http://127.0.0.1:5000",
+	"devDependencies": {
+		"@types/uniqid": "^5.3.2"
+	}
 }
