--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
 		"sass": "^1.54.6",
 		"typescript": "^4.8.2",
 		"uniqid": "^5.4.0",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/material": "^5.10.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
