--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -17,10 +19,7 @@
 		"sass": "^1.54.6",
 		"typescript": "^4.8.2",
 		"uniqid": "^5.4.0",
-		"web-vitals": "^2.1.4",
-		"@emotion/react": "^11.10.4",
-		"@emotion/styled": "^11.10.4",
-		"@mui/material": "^5.10.3"
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
